--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Courier+Prime&display=swap');
 
 * {
   box-sizing: border-box;
@@ -11,12 +10,19 @@ h2,
 h3 {
   padding: 0;
   margin: 0;
+  font-family: 'Permanent Marker', cursive;
 }
+
+button
+{
+  font-family: 'Permanent Marker', cursive;
+}
+
 body {
   overflow-x: hidden;
   height: 100%;
   min-height: 100vh;
-  font-family: 'Courier Prime', monospace;
+  font-family: 'Permanent Marker', cursive;
   background-color: #f5f5f5;
 }
 #root {
